# kthfsdv-ekf

./: CMakeLists.txt  LICENSE  README.md  package.xml
matlab/: analyze_data.m  gnss_update.m  imu_update.m  init_ekf.m  run_ekf.m  speedometer_update.m
report/: main.tex
report/figures/: ekf_estimate.eps  ekf_estimate_zoom.eps  no_gps.eps
scripts/: data_publisher.py
src/: ekf_node.cpp
