<?xml version="1.0"?>
<package format="2">
  <name>kthfsdv-ekf</name>
  <version>0.0.1</version>
  <description>Extended Kalman filter impleentation for fusing IMU, GPS and speedometer measurements</description>

  <maintainer email="leonardb@kth.se">Leonard Bruns</maintainer>
  <license>MIT</license>
  <author email="leonardb@kth.se">Leonard Bruns</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
